--- a/website/home/static/less/components.less
+++ b/website/home/static/less/components.less
@@ -1963,7 +1963,8 @@ span.color-red{
   }
 
   #sequence .subtitle {
-    visibility: hidden;
+    top: 80px;
+    width: 70%;
   }
 
 }
@@ -2265,6 +2266,10 @@ span.color-red{
 		font-size: 120%;
 		border: none;
 	}
+
+    .mainmenu li.logo-wrapper a {
+      padding: 0;
+    }
 
 	.mainmenu > ul,
 	.mainmenu .mainmenu-submenu-inner {
